# waveshare_withrottle_dial

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.sh  partitions.csv  platformio.ini  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
LICENSES/: MIT-len0rd.txt
components/battery_bsp/: CMakeLists.txt  battery_bsp.c  battery_bsp.h
components/console_commands/: ConsoleCommands.cpp  ConsoleCommands.h
components/horn_resolver/: CMakeLists.txt  horn_resolver.cpp
components/hw_config/: user_config.h
components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c
components/jmri_discovery/: CMakeLists.txt  choose_server.cpp  jmri_discovery.cpp
components/lcd_bl_pwm_bsp/: CMakeLists.txt
components/lcd_touch_bsp/: lcd_touch_bsp.c
components/loco_ref/: CMakeLists.txt  loco_ref.cpp
components/netprov/: CMakeLists.txt  captive_dns.cpp  netprov.cpp  netprov_validation.cpp  portal_http.cpp
components/ota_server/: CMakeLists.txt  ota_server.cpp  ota_server.h
components/param/: IParam.cpp  IParam.h  NvsMgr.cpp  NvsMgr.h  Param.h  ParamMgr.h  (+1 more)
components/ui/: CMakeLists.txt  display_init.cpp
components/ui_screens/: CMakeLists.txt  list_widget.cpp  list_widget.h  screen_connecting.cpp  screen_functions.cpp  screen_home.cpp  screen_mgr.cpp  screen_provisioning.cpp  screen_recent.cpp  screen_roster.cpp  screen_settings.cpp  screen_splash.cpp  screen_throttle.cpp  train_fn_screen.cpp  train_fn_screen.h
components/ui_screens/include/: screen_mgr.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  ui_events.cpp
sq_studio_prj/: Themes.slt  project.info  withr_knob_app.sll  withr_knob_app.slp  withr_knob_app.spj  withr_knob_app_events.py
src/: secrets.h.example
(+32 files in other folders)
